--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Privacy Policy</h1>
 
-Malick built the Caption It app as a Free app. This SERVICE is provided by Malick at no cost and is intended for use as is.
+<p>Malick built the Caption It app as a Free app. This SERVICE is provided by Malick at no cost and is intended for use as is.</p>
 
 This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
 
