--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <p>Malick built the Caption It app as a Free app. This SERVICE is provided by Malick at no cost and is intended for use as is.</p>
 
-This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
+<p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
 
 If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
 
