--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ The app does use third party services that may collect information used to ident
 
 <p>I may employ third-party companies and individuals due to the following reasons:</p>
 
-    <ul>To facilitate our Service;
-    <ul>To provide the Service on our behalf;
-    <ul>To perform Service-related services; or
-    <ul>To assist us in analyzing how our Service is used.
+<ul>To facilitate our Service;</ul>
+    <ul>To provide the Service on our behalf;</ul>
+    <ul>To perform Service-related services; or</ul>
+    <ul>To assist us in analyzing how our Service is used.</ul>
 
 <p>I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
 
