--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Privacy Policy</h1>
+<center><h1>Privacy Policy</h1></center>
 
 <p>Malick built the Caption It app as a Free app. This SERVICE is provided by Malick at no cost and is intended for use as is.</p>
 
